--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
 	},
 	"dependencies": {
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"react-icons": "^4.12.0",
+		"uuid": "^9.0.1"
 	},
 	"devDependencies": {
 		"@types/react": "^18.2.37",
