--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
 		"eslint": "eslint --fix . --ext .js, .jsx, .ts, .tsx"
 	},
 	"dependencies": {
+		"animate.css": "^4.1.1",
+		"nvm": "^0.0.4",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.12.0",
@@ -31,6 +33,6 @@
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.4.4",
 		"prettier": "^3.1.0",
-		"vite": "^5.0.0"
+		"vite": "^5.0.2"
 	}
 }
