--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"eslint": "eslint --fix . --ext .js, .jsx, .ts, .tsx"
 	},
 	"dependencies": {
+		"animate.css": "^4.1.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.12.0",
